# receipt_tui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  mise.toml  shortcut.toml
.claude/scripts/: context-monitor.py
.github/actions/create-dummy-credentials/: action.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: release.yml  security.yml  test.yml
.serena/: project.yml
.serena/memories/: completion_steps.md  project_overview.md  style_conventions.md  suggested_commands.md
assets/: demo.tape
skills/receipt-tui-vhs/: SKILL.md
skills/receipt-tui-vhs/references/: receipt-tui-vhs.md
src/: app.rs  config.rs  events.rs  input.rs  jobs.rs  layout.rs  main.rs  shortcuts.rs  ui.rs  wizard.rs  worker.rs
src/app/: handlers.rs  mod.rs  render.rs
src/google/: auth.rs  drive.rs  mod.rs  sheets.rs  token_store.rs
