[package]
name = "receipt_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
crossterm = "0.29"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util"] }
toml = "0.9.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
yup-oauth2 = "12.1.1"
